# Eureka

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  Optimizer_README.md  README.md  Untitled.ipynb  code_of_conduct.md  environment.yml  environment_jwebbinar41.yml  environment_pymc3.yml  mkdocs.yml  old.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: blank_issue.yml  bug-template.yml  first-template.yml  improvement-template.yml
.github/workflows/: assign-issue.yml  autolabel.yml  build_matrix.yml  dependency-compat.yml  draft-pdf.yml  flake8_linting.yml  latest-allowed-canary.yml  pr-ci.yml  pr_testing.yml  pytest_testing.yml  pytest_testing_pymc3.yml  reusable-build-matrix.yml  reusable-pytest.yml  update-generated-environment.yml
HST/eureka/: __init__.py
ci/constraints/: check-oldest-practical-py311.sh  oldest-practical-py311.txt
demos/: Intro to ExoCTK.ipynb  Introduction to Eureka.ipynb  LCFitting_Demo.html  LCFitting_Demo.py  README  Run_Eureka.ipynb  S3_wasp43b.ecf  config.yaml  docs.txt  eureka.py  openQs.txt  params.txt
demos/HD86226c/: S3_HD86226c.ecf  S4_HD86226c.ecf  S5_HD86226c.ecf  S6_HD86226c.ecf  optimizer_inputs.txt  run_eureka_optimization_wfc3.ipynb  run_eureka_wfc3_HD86226c.ipynb  run_multSpec.ipynb  s5_fit_par_HD86226c.epf
demos/HST/: S3_wfc3_template.ecf  S4_wfc3_template.ecf  S5_wfc3_template.ecf  S6_wfc3_template.ecf  download_data_HST_template.py  run_eureka_wfc3.py  s5_fit_par_wfc3_template.ecf  s5_fit_par_wfc3_template.epf
demos/JWST/: S1_miri_template.ecf  S1_nirx_template.ecf  S2_NIRISS_fs_template  S2_imaging_template.ecf  S2_miri_lrs_template.ecf  S2_nircam_wfss_template.ecf  S2_niriss_soss_template.ecf  S2_niriss_template  S2_niriss_template.ecf  S2_nirspec_fs_template.ecf  S3_miri_lrs_template.ecf  S3_miri_photometry_template.ecf  S3_nircam_photometry_template.ecf  S3_nircam_wfss_template.ecf  S3_niriss_soss_template.ecf  S3_niriss_template.ecf  S3_nirspec_fs_template.ecf  S4_template.ecf  S5_fit_par_template.ecf  S5_fit_par_template.epf  S5_template.ecf  S6_template.ecf  download_data_JWST_template.py  objective_funcs.py  optimizer_inputs_miri_LRS.txt  optimizer_inputs_niriss_SOSS.txt  optimizer_inputs_nirspec_G395H.txt  optimizer_inputs_nirspec_PRISM.txt  optimizers.py  run_eureka.py  run_eureka_optimization_miri_LRS.py  run_eureka_optimization_niriss_SOSS.py  run_eureka_optimization_nirspec_G395H.py  run_eureka_optimization_nirspec_PRISM.py
demos/S1/: S1_miri_template.ecf  S1_nirx_template.ecf  run_eureka.py
demos/S2/: S2_imaging_template.ecf  S2_miri_lrs_template.ecf  S2_miri_template.ecf  S2_nircam_wfss_template.ecf  S2_nirspec_fs_template.ecf  S3_wfc3_template.ecf  S4_wfc3_template.ecf  run_eureka.py  run_eureka_wfc3.py
demos/S3/: S3_template.ecf  S3_wasp43b.ecf  S3_wasp43b_miri.ecf  S4_template.ecf  S4_wasp43b.ecf  run_eureka.py
demos/S3_2021-05-31_11-29-52_wasp43b/: S3_wasp43b_spec_lc.txt
demos/S4/: S4_template.ecf  run_eureka.py
demos/S5/: LCFitting_Demo.py  S5_template.ecf  run_S5.py  run_eureka.py  s5.ecf  s5_fit_par.ecf
demos/S6/: S6_template.ecf  run_eureka.py
docs/: index.md
docs/maintainers/: dependency-floor-phase0.md
docs/media/: S1_template.ecf  S2_template.ecf  S3_template.ecf  S4_template.ecf  S4cal_template.ecf  S5_fit_par_template.ecf  S5_fit_par_template.epf  S5_template.ecf  S6_template.ecf  stage3_flowchart.key  stage4_flowchart.key  stages_flowchart.key
docs/source/: S3_template.ecf  acknowledgements.rst  api.rst  conf.py  contribute.md  copyright.rst  dependency_policy.md  ecf.rst  faq.rst  hackathon-day2-tutorial.ipynb  index.rst  installation.rst  intro.ipynb  notebooks.rst  outputs.rst  quickstart.rst  stages.rst  tutorial.rst
eureka/: __init__.py  niriss_class.py
eureka/S1_detector_processing/: Eureka_ramp_fitting.py  __init__.py  ramp_fitting.py  s1_process.py  update_saturation.py
eureka/S2_calibrations/: __init__.py  s2_calibrate.py
eureka/S3_data_reduction/: __init__.py  background.py  bright2flux.py  flats.py  hst_scan.py  julday.py  miri.py  nircam.py  niriss.py  niriss_cython.pyx  niriss_extraction.py  niriss_order_guesses.csv  niriss_profiles.py  niriss_python.py  nirspec.py  optspex.py  plots_s3.py  s3_reduce.py  s3_reduce_miri.py  s3_reduce_niriss.py  s3_reduce_short.py  sigrej.py  source_pos.py  trace.py  wfc3.py  wfc3_1reduce.py  wfc3_scan.py
eureka/S4_generate_lightcurves/: __init__.py  clipping.py  drift.py  plots_s4.py  s4_genLC.py  s4_genLC_RA.py  s4_genLC_niriss.py  wfc3_2genLC.py
eureka/S5_lightcurve_fitting/: __init__.py  fitters.py  gradient_fitters.py  lightcurve.py  likelihood.py  limb_darkening_fit.py  modelgrid.py  models.py  parameters.py  plots_s5.py  s5_fit.py  s5_fit_multspec.py  simulations.py  utils.py
eureka/S6_planet_spectra/: __init__.py  plots_s6.py  s6_spectra.py
eureka/data_reduction/: miri.py  s3_reduce.py  s4_genLC.py  wfc3_1reduce.py  wfc3_scan.py
eureka/lib/: __init__.py  astropytable.py  barycorr.py  centerdriver.py  centroid.py  clipping.py  correlated_noise.py  demc.py  disk.py  gaussian.py  gaussian_min.py  gelmanrubin.py  generate_epf.py  hiloerr.py  hst_scan.py  integrate.py  interp2d.py  julday.py  logedit.py  lsq.py  manageevent.py  masking.py  medstddev.py  modelsPOET.py  nasc.py  optimizers.py  orbit.py  plots.py  readECF.py  readEPF.py  reader3.py  savetable.py  sigrej.py  simultaneous_order_fitting.py  smooth.py  smoothing.py  (+12 more)
joss/: paper.bib  paper.md
lib/: models.py  smooth.py  time2phase2.py
lightcurve_fitting/: fitters.py  lightcurve.py  limb_darkening_fit.py  modelgrid.py  models.py  simulations.py
src/: citations.py  environment.yml
tests/: __init__.py  conftest.py  test_MIRI.py  test_NIRCam.py  test_NIRISS.py  test_NIRSpec.py  test_Photometry_NIRCam.py  test_S3opt.py  test_S4cal.py  test_WFC3.py  test_allapers_inputdir.py  test_general.py  test_lightcurve_fitting.py  test_miri_profile.pstats  test_nircam_profile.pstats  test_nirspec_profile.pstats  test_s1_miri_steps.py
(+468 files in other folders)
