[metadata]
name = eureka
author = Eureka! pipeline developers
author_email = kbstevenson@gmail.com
description = A data reduction and analysis pipeline intended for time-series observations with the James Webb Space Telescope (JWST).
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = https://github.com/kevin218/Eureka
project_urls =
    Bug Tracker = https://github.com/kevin218/Eureka/issues
    Source Code = https://github.com/kevin218/Eureka
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent


[options]
package_dir =
    =src
packages = find:
zip_safe = True
python_requires= >=3.8
setup_requires =
    cython
install_requires =
    astraeus @ git+https://github.com/kevin218/Astraeus@main
    astropy
    astroquery
    batman-package
    bokeh
    ccdproc
    celerite # Needed for GP
    corner
    crds
    cython
    dask < 2022.6.1
    dynesty > 1.0
    emcee > 3.0.0
    exotic-ld
    george # Needed for GP
    gwcs
    h5py < 3.2
    lmfit
    matplotlib
    numpy >= 1.20.0
    pandas
    photutils
    scipy >= 1.4.0 # Needed for scipy.fft
    stdatamodels
    svo_filters
    tqdm


[options.packages.find]
where = src


[options.extras_require]
jwst =
    jwst==1.6.0
    stcal >= 1.0.0 # Needed for our create_integration_model function
    asdf
hst =
    # Need the GitHub version as 0.2.6 is required for python>=3.10, but 0.2.6 is not yet on PyPI
    image_registration @ git+https://github.com/keflavich/image_registration@master
docs =
    myst-parser
    nbsphinx
    numpydoc
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme
test =
    codecov
    flake8
    pytest
    pytest-cov
    pytest-doctestplus


[flake8]
# Error codes explained here: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
select = E1,E2,E3,E4,E5,E7,W6,F
ignore = W504,W503,E704,E226,E722
exclude =
    # Ignore built files
    ./build/**/*
    **/site-packages/**/*
    # Ignore docs
    ./docs/**/*
    # Ignore VS Code files
    .vscode/*
    # Ignore run_eureka.py files in demos folder
    **/run_eureka*.py
    # Temporarily ignore NIRISS files
    **/*niriss*.py
per-file-ignores =
    # Need to have unused imports in the init files
    **/__init__.py:F401
    # Using exec commands, so variable is actually used
    **/manageevent.py:F841
    # Need to allow prepending to PATH
    ./demos/**/run_*.py:E402
    # Need to protect against crashes if jwst not installed
    **/test_*.py:E402
    # Need to protect against crashes if hst packages not installed
    **/test_WFC3.py:F401,E402
    # Keep the unused numpy so users can pass in numpy values (e.g. np.inf)
    **/readECF.py:F401
    # Keep the aligned values to explain what they are
    **/hst_scan.py:E241
    # Temporarily ignore unused s1 error until we have an S1 test
    **/test_MIRI.py:F401,E402
