[metadata]
name = eureka
author = Eureka! pipeline developers
author_email = kbstevenson@gmail.com
description = A data reduction and analysis pipeline intended for time-series observations with JWST.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = [LICENSE,]
url = https://github.com/kevin218/Eureka
project_urls =
    Bug Tracker = https://github.com/kevin218/Eureka/issues
    Source Code = https://github.com/kevin218/Eureka
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent


[options]
package_dir =
    =src
packages = find:
zip_safe = True
python_requires= >=3.10
install_requires =
    astraeus@git+https://github.com/kevin218/Astraeus@main
    astropy
    astroquery
    batman-package
    bokeh<3.0
    catwoman@git+https://github.com/taylorbell57/catwoman@master
    ccdproc
    celerite2 # Needed for GP
    corner
    crds<12 # Upper limit needed to avoid bugs with crds.get_context_name
    dynesty>1.0 # Lower limit needed for specific arguments
    emcee>3.0.0 # Lower limit needed for specific arguments
    exotic-ld==3.2.0 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
    fleck
    george # Needed for GP
    h5py
    lmfit
    matplotlib>=3.6 # Lower limit needed for set_layout_engine()
    mc3 # Needed for uncertainties in the Allan variance plots in S5
    numpy>=1.20.0,<1.25 # Upper limit needed for Apple silicon
    pandas
    pastasoss>=1.2.1
    photutils
    requests
    scipy>=1.8.0 # Lower limit needed for scipy.spatial.QhullError
    setuptools_scm
    stdatamodels
    svo_filters
    tqdm


[options.packages.find]
where = src


[options.extras_require]
jwst =
    jwst==1.15.1
    stcal>=1.0.0 # Lower limit needed for our create_integration_model function
hst =
    image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
docs =
    myst-parser
    nbsphinx
    numpydoc
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme
test =
    flake8
    pytest<8.0 # Upper limit needed to avoid some conflict between pytest, an asdf package, and something in the pymc3 set of installs
    pytest-cov
    pytest-doctestplus
pymc3 =
    arviz==0.12.1
    jwst==1.11.4
    stcal>=1.0.0 # Lower limit needed for our create_integration_model function
    exoplanet
    exoplanet_core
    # mkl-service # Needed for theano - only available by conda install mkl-service
    pymc3
    starry>=1,<2
    theano-pymc
    # Extra version limits
    numpy>=1.20.0,<1.22 # Upper limit needed for theano, starry, and pymc3
    opencv-python-headless<4.8 # Upper limit needed for numpy<1.22
    xarray<2023.10.0 # Upper limit needed for numpy<1.22
jupyter =
    ipykernel
    ipython
    jupyter


[flake8]
# Error codes explained here: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
select = E1,E2,E3,E4,E5,E7,W6,F
ignore = W504,W503,E704,E226,E722
exclude =
    # Ignore built files
    ./build/**/*
    **/site-packages/**/*
    # Ignore docs
    ./docs/**/*
    # Ignore VS Code files
    .vscode/*
    # Ignore files in my ecfs folder
    ./ecfs/*
    # Ignore run_eureka.py files in demos folder
    **/run_eureka*.py
per-file-ignores =
    # Need to have unused imports in the init files
    **/__init__.py:F401
    # Need unused imports in the init files, need to mute some warnings
    ./src/eureka/__init__.py:F401,E402
    # Want to suppress the "figure with num: #### already exists" UserWarnings
    ./src/eureka/**/plots*.py:E402
    # Using exec commands, so variable is actually used
    **/manageevent.py:F841
    # Need to allow prepending to PATH
    ./demos/**/run_*.py:E402
    # Need to protect against crashes if jwst not installed
    **/test_*.py:E402
    # Need to modify c compiler settings before importing starry
    **/differentiable_models/*.py:E402
    # Need to have unused imports in the init file
    **/differentiable_models/__init__.py:F401
    # Need to protect against crashes if hst packages not installed
    **/test_WFC3.py:F401,E402
    # Keep the unused numpy so users can pass in numpy values (e.g. np.inf)
    **/readECF.py:F401
    # Keep the aligned values to explain what they are
    **/hst_scan.py:E241
    # Temporarily ignore unused s1 error until we have an S1 test
    **/test_MIRI.py:F401,E402
    # Ignore over length bibtex lines
    ./src/eureka/lib/citations.py:E501
