[metadata]
name = eureka-bang
author = Eureka! pipeline developers
author_email = kbstevenson@gmail.com
description = A data reduction and analysis pipeline intended for time-series observations with JWST.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/kevin218/Eureka
project_urls =
    Bug Tracker = https://github.com/kevin218/Eureka/issues
    Source Code = https://github.com/kevin218/Eureka
keywords =
    JWST
    HST
    timeseries
    astronomy
    exoplanets
    transit
    eclipse
    light curve
    phase curve
    spectroscopy
    photometry
    data reduction
    data analysis
    pipeline
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    =src
packages = find:
zip_safe = True
python_requires= >=3.11,<3.14
include_package_data = True
install_requires =
    astraeus-io
    astropy
    astroquery
    batman-package
    bokeh
    catwoman@git+https://github.com/KathrynJones1/catwoman@master
    ccdproc
    celerite2 # Needed for GP
    corner
    crds
    dynesty>1.0 # Lower limit needed for specific arguments
    emcee>3.0.0 # Lower limit needed for specific arguments
    exotic-ld==3.2.0 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
    fleck
    george # Needed for GP
    h5py>=3.7.0 # Lower limit needed to avoid issues with JWST I/O routines
    lmfit
    matplotlib>=3.6 # Lower limit needed for set_layout_engine()
    mc3 # Needed for uncertainties in the RMS time-averaging plots in S5
    numpy>=1.20.0,<2.0 # numpy 2.0 introduces breaking changes for some packages
    pandas
    pastasoss>=1.2.2
    photutils
    # planet-harmonica # Currently only supports for python 3.8 -- 3.10
    planet-harmonica@git+https://github.com/DavoGrant/harmonica@main
    requests
    scipy>=1.12.0 # Lower limit needed for stcal.ramp_fitting.likely_fit
    setuptools_scm>=6.2 # Needed to support pyproject.toml config
    shapely
    stdatamodels
    svo_filters
    tqdm


[options.package_data]
eureka.lib = *.mplstyle


[options.packages.find]
where = src


[options.extras_require]
jwst =
    jwst==1.18.0 # Pinned due to CRDS/stcal compatibility requirements
    stcal>=1.0.0 # Lower limit needed for our create_integration_model function
hst =
    image_registration@git+https://github.com/keflavich/image_registration@70e3880 # Need GitHub version to avoid np.float issue
docs =
    myst-parser>=0.18.0 # Lower bound for stable MyST support
    nbsphinx>=0.8.9 # Compatible with modern Sphinx and Jupyter
    numpydoc>=1.5 # Avoids issues with recent Sphinx versions
    sphinx>=6.0 # Modern baseline version
    sphinx-automodapi>=0.13.0 # Known to work with sphinx>=6
    sphinx-rtd-theme>=1.3.0 # Style updates and Sphinx compatibility
test =
    flake8
    pytest<8.0 # Upper limit due to asdf+pytest incompatibility
    pytest-cov
    pytest-doctestplus
jupyter =
    ipykernel>=6.0.0 # Needed for modern Jupyter compatibility
    ipympl>=0.9.3 # Needed for interactive backend stability
    ipython>=7.0.0 # Avoid legacy issues with async REPL
    jupyter>=1.0.0 # Base metapackage
dev =
    build
    twine


[flake8]
# Error codes explained here: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
select = E1,E2,E3,E4,E5,E7,W6,F
ignore = W504,W503,E704,E226,E722
exclude =
    # Ignore built files
    ./build/**/*
    **/site-packages/**/*
    # Ignore docs
    ./docs/**/*
    # Ignore VS Code files
    .vscode/*
    # Ignore files in my ecfs folder
    ./ecfs/*
    # Ignore run_eureka.py files in demos folder
    **/run_eureka*.py
per-file-ignores =
    # Need to have unused imports in the init files
    **/__init__.py:F401
    # Need unused imports in the init files, need to mute some warnings
    ./src/eureka/__init__.py:F401,E402
    # Want to suppress the "figure with num: #### already exists" UserWarnings
    ./src/eureka/**/plots*.py:E402
    # Using exec commands, so variable is actually used
    **/manageevent.py:F841
    # Need to allow prepending to PATH
    ./demos/**/run_*.py:E402
    # Need to protect against crashes if jwst not installed
    **/test_*.py:E402
    # Need to protect against crashes if hst packages not installed
    **/test_WFC3.py:F401,E402
    # Keep the unused numpy so users can pass in numpy values (e.g. np.inf)
    **/readECF.py:F401
    # Keep the aligned values to explain what they are
    **/hst_scan.py:E241
    # Temporarily ignore unused s1 error until we have an S1 test
    **/test_MIRI.py:F401,E402
    # Ignore over length bibtex lines
    ./src/eureka/lib/citations.py:E501
